hard-gists/411123/run.log
=== Docker Run Log for 411123 ===
Started at: Mi 29. Okt 14:21:45 CET 2025

[2025-10-29 14:21:45] START: Running container for 411123
[2025-10-29 14:21:45] SUCCESS: Container d01a4f796caba982fe5ccc82385f8fe9278d59650eedca528313585d7865e9d0 started for 411123
=== Container logs for 411123 ===
  File "/snippet.py", line 18
    raise TemplateSytnaxError, "GenericTNode was called with an non-registered tag"
                             ^
SyntaxError: invalid syntax
=== End of logs for 411123 ===
[2025-10-29 14:21:47] INFO: Container d01a4f796caba982fe5ccc82385f8fe9278d59650eedca528313585d7865e9d0 has stopped
